# awcc-ctrl-exe-moc

./: .gitignore  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILLS.md  configure.yaml
.github/workflows/: markdownlint.yml
crates/generator/: Cargo.toml
crates/generator/src/: main.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
